# UERANSIM

./: CMakeLists.txt  README.md
config/: open5gs-gnb.yaml  open5gs-ue.yaml
src/gnb/: nts.hpp  types.hpp
src/gnb/gtp/: task.cpp  task.hpp
src/gnb/ngap/: session.cpp  task.hpp  transport.cpp
src/lib/nas/: enums.hpp  ie6.cpp  ie6.hpp  utils.cpp  utils.hpp  values.cpp  values.hpp
src/tsntranslator/: CMakeLists.txt  qosmapping.cpp  qosmapping.hpp
src/ue/: CMakeLists.txt
src/ue/nas/sm/: modify.cpp  sm.hpp  transport.cpp
src/ue/tun/: config.cpp
